added endpoint for set file access
